# ARIAC-AgileRoboticsforIndustrialAutomationCompetition2023

./: README.md
competitor_interfaces/: CMakeLists.txt  package.xml
competitor_interfaces/msg/: CompletedOrder.msg
etc/: instructions.txt
group6/: CMakeLists.txt  package.xml
group6/config/: group6_sensors.yaml
group6/doc/: aliases.txt  lecture7.yaml
group6/group6/: competition_interface.py
group6/include/group6/: ceiling_robot.hpp  floor_robot.hpp  sensor_camera.hpp
group6/launch/: group6.launch.py
group6/nodes/: main.py
group6/rviz/: ariac.rviz
group6/src/: ceiling_robot.cpp  floor_robot.cpp  main.cpp  sensor_camera.cpp
group6/trials/: lecture6.yaml
